--- a/website/vmail.html
+++ b/website/vmail.html
@@ -3,10 +3,10 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
       <title>Vmail</title>
-      <link href="stylesheets-vmail/reset.css?1292352305" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/960.css?1292352305" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/text.css?1292352305" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/site.css?1292352305" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/reset.css?1292353158" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/960.css?1292353158" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/text.css?1292353158" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/site.css?1292353158" media="screen" rel="stylesheet" type="text/css" />
       <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'8579b5f8-0860-4ea6-9ef1-6f0f58359a99'});</script>
       <script type="text/javascript" src="lightbox2/js/prototype.js"></script>
       <script type="text/javascript" src="lightbox2/js/scriptaculous.js?load=effects,builder"></script>
@@ -222,23 +222,22 @@ blank line between the headers and the body of your message.</p>
 
 <p>When you're done writing, send the message by typing <code>,vs</code> in normal mode.</p>
 
-<p>In this early version of vmail, saving and resuming draft emails is a bit
-clunky. But it works.</p>
-
 <p>While you're composing a message in the composition window, you can save a
-draft to a local file the standard vim <code>w</code> command with a filename argument:</p>
+draft to a local file with the standard vim <code>:w</code> command:</p>
 
 <pre><code>:w my_draft_filename.txt 
 </code></pre>
+
+<p>Make sure you append *.txt to the filename, or else vmail won't recognize it as
+a potential email when you reload it.</p>
 
 <p>Make sure you don't use <code>:wq</code> unless you mean to quit vmail immediately. After
 you save the draft to a file, you can go back to the message list by typing <code>q</code>
 in normal mode.</p>
 
-<p>To resume writing the draft later, type <code>,c</code> to open a message composition
-window, delete all its contents, and then type <code>:r my_draft_filename.txt</code> to
-load the draft email into the buffer. Make sure you delete any blank lines that
-are created above the header. Resume editing. Send by typing <code>,vs</code>.</p>
+<p>To resume writing the draft later, just type <code>:e my_draft_filename.txt</code> to load
+the draft email into a buffer. (Use <code>:e!</code> if you're already in the message
+composition window.) Resume editing. Send by typing <code>,vs</code>.</p>
 
 <p>At any point, you can quit the composition window by typing <code>q</code> in normal mode.</p>
 
