--- a/website/vmail.html
+++ b/website/vmail.html
@@ -3,10 +3,10 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
       <title>Vmail</title>
-      <link href="stylesheets-vmail/reset.css?1292354145" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/960.css?1292354145" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/text.css?1292354145" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/site.css?1292354145" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/reset.css?1292355130" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/960.css?1292355130" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/text.css?1292355130" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/site.css?1292355130" media="screen" rel="stylesheet" type="text/css" />
       <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'8579b5f8-0860-4ea6-9ef1-6f0f58359a99'});</script>
       <script type="text/javascript" src="lightbox2/js/prototype.js"></script>
       <script type="text/javascript" src="lightbox2/js/scriptaculous.js?load=effects,builder"></script>
@@ -351,13 +351,13 @@ perfectly. In particular, there seems to be a bug in MacVim that prevents
 vmail's status line activity messages from appearing properly. Nonetheless,
 most of vmail is functional in MacVim.</p>
 
-<p>To use MacVim as your vmail Vim engine, <code>export VMAIL_VIM=mvim</code> before startin
+<p>To use MacVim as your vmail Vim engine, <code>export VMAIL_VIM=mvim</code> before starting
 vmail.</p>
 
 <p>Note that when vmail uses MacVim, the terminal window in which you invoke vmail
 will show vmail's logging output while MacVim is running. To quit vmail in
 MacVim mode, you will have to press CTRL-c in this window to stop the vmail
-process.</p>
+process in after quitting the MacVim app.</p>
 
 <h2>vmail file byproducts</h2>
 
@@ -378,11 +378,11 @@ what's going on behind the scenes as you use vmail.</p>
 and SMTP authentication. So vmail transmits your password securely over the
 network.</p>
 
-<p>You can also be sure that the vmail code doesn't do anything nefarious with your
-Gmail password because vmail is open source. Anyone can inspect the source code
-of the copy fo vmail that runs on your computer and inspect the code at the
-<a href="https://github.com/danchoi/vmail">github repository</a> and at <a href="https://rubygems.org/gems/vmail">rubygems.org</a> (where the vmail gem is
-downloaded from).</p>
+<p>You can also be sure that the vmail code doesn't do anything nefarious with
+your Gmail password because vmail is open source. Anyone can inspect the source
+code of the copy of vmail that runs on your computer and inspect the latest
+vmail code at the <a href="https://github.com/danchoi/vmail">github repository</a> and at <a href="https://rubygems.org/gems/vmail">rubygems.org</a> (where the
+vmail gem is downloaded from).</p>
 
 <h2>Bug reports, feature requests</h2>
 
