--- a/website/vmail.html
+++ b/website/vmail.html
@@ -3,10 +3,10 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
       <title>Vmail</title>
-      <link href="stylesheets-vmail/reset.css?1292358415" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/960.css?1292358415" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/text.css?1292358415" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/site.css?1292358415" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/reset.css?1292359285" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/960.css?1292359285" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/text.css?1292359285" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/site.css?1292359285" media="screen" rel="stylesheet" type="text/css" />
       <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'8579b5f8-0860-4ea6-9ef1-6f0f58359a99'});</script>
       <script type="text/javascript" src="lightbox2/js/prototype.js"></script>
       <script type="text/javascript" src="lightbox2/js/scriptaculous.js?load=effects,builder"></script>
@@ -63,7 +63,7 @@ signature: |
   Sent from vmail. http://danielchoi.com/software/vmail.html
 </code></pre>
 
-<p>This file should be formatted in <a href="https://github.com/danchoi/vmail">YAML syntax</a>.</p>
+<p>This file should be formatted in <a href="http://www.yaml.org/spec/1.2/spec.html">YAML syntax</a>.</p>
 
 <p>You can omit the password key-value pair if you'd rather not have the password
 saved in the file. In that case, you'll prompted for the password each time you
@@ -342,9 +342,10 @@ before 30-Nov-2010 since 1-Nov-2010 from prx.org
 
 <p>Tip: When you're entering your search query, <code>&lt;C-u&gt;</code> clears the query line.</p>
 
-<p>Power-Tip: <code>&lt;C-f&gt;</code> opens a mini-editor that contains the current query plus a history of
-previous vmail search queries. You can edit any line in this mini-editor and
-press ENTER to perform the query on that line.</p>
+<p>Power-Tip: When you're at the search query prompt, <code>&lt;C-f&gt;</code> opens a mini-editor
+that contains the current query plus a history of previous vmail search
+queries. You can edit any line in this mini-editor and press ENTER to perform
+the query on that line.</p>
 
 <h2>Using vmail with MacVim</h2>
 
@@ -376,7 +377,7 @@ what's going on behind the scenes as you use vmail.</p>
 
 <h2>Is my gmail password secure?</h2>
 
-<p>In short, yes. vmail uses TLS (<a href="https://github.com/danchoi/vmail">Transport Layer Security</a>) to perform IMAP
+<p>In short, yes. vmail uses TLS (<a href="http://en.wikipedia.org/wiki/Transport_Layer_Security">Transport Layer Security</a>) to perform IMAP
 and SMTP authentication. So vmail transmits your password securely over the
 network.</p>
 
@@ -388,7 +389,7 @@ vmail gem is downloaded from).</p>
 
 <h2>Bug reports, feature requests</h2>
 
-<p>Please file bug reports and feature requests in the <a href="https://github.com/danchoi/vmail">vmail github issue tracker</a>.</p>
+<p>Please file bug reports and feature requests in the <a href="https://github.com/danchoi/vmail/issues">vmail github issue tracker</a>.</p>
 
 <h2>How to contact the developer</h2>
 
