set textwidth in compose windows

--- a/website/vmail.html
+++ b/website/vmail.html
@@ -3,10 +3,10 @@
   <head>
     <meta http-equiv="content-type" content="text/html; charset=utf-8" />
       <title>Vmail</title>
-      <link href="stylesheets-vmail/reset.css?1292363304" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/960.css?1292363304" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/text.css?1292363304" media="screen" rel="stylesheet" type="text/css" />
-      <link href="stylesheets-vmail/site.css?1292363304" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/reset.css?1292363893" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/960.css?1292363893" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/text.css?1292363893" media="screen" rel="stylesheet" type="text/css" />
+      <link href="stylesheets-vmail/site.css?1292363893" media="screen" rel="stylesheet" type="text/css" />
       <script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'8579b5f8-0860-4ea6-9ef1-6f0f58359a99'});</script>
       <script type="text/javascript" src="lightbox2/js/prototype.js"></script>
       <script type="text/javascript" src="lightbox2/js/scriptaculous.js?load=effects,builder"></script>
@@ -153,8 +153,9 @@ top of the list that looks something like this:</p>
 <h2>Starring, deleting, archiving, marking spam</h2>
 
 <p>To star a message, put the cursor on it and type <code>,*</code> or alternatively <code>s</code>.
-Starring a message copies it to the <code>starred</code> mailbox.  Starred messages are
-marked with a <code>[*]</code> symbol and color-highlighted.</p>
+(Note that the comma before the * is part of the key sequence.) Starring a
+message copies it to the <code>starred</code> mailbox.  Starred messages are marked with a
+<code>[*]</code> symbol and color-highlighted.</p>
 
 <p>To delete a message, put the cursor on it and type <code>,#</code> or alternatively <code>,d</code>.
 Deleting a message puts it in the <code>trash</code> mailbox. Deleting a message from the
