sidebar link to issue tracker

--- a/website/vmail-template.html
+++ b/website/vmail-template.html
@@ -31,6 +31,7 @@
             <ul>
               <li><a href="https://github.com/danchoi/vmail">github repo</a></li>
               <li><a href="https://rubygems.org/gems/vmail">rubygems page</a></li>
+              <li><a href="https://github.com/danchoi/vmail/issues">issue tracker</a></li>
             </ul>
           </div>
    
