web template tweaks

--- a/website/vmail-template.html
+++ b/website/vmail-template.html
@@ -23,6 +23,14 @@
         
           <div class="sidebar">
 
+            <h4>current version</h4>
+
+            <ul>
+              <li>
+                {{version}}
+              </li>
+            </ul>
+
             <h4>links</h4>
             <ul>
               <li><a href="https://github.com/danchoi/vmail">github repo</a></li>
