--- a/website/vmail-template.html
+++ b/website/vmail-template.html
@@ -38,7 +38,7 @@
               <li><a href="https://github.com/danchoi/vmail/issues">issue tracker</a></li>
               <li><a href="https://github.com/danchoi/vmail/commits/master">commit history</a></li>
               <li><a href="https://github.com/danchoi/vmail/wiki">wiki</a></li>
-              <li><a href="http://www.google.com/search?sourceid=chrome&ie=UTF-8&q=vmail+vim#hl=en&tbo=1&tbs=mbl:1,mbl_sv:0&q=link:http://danielchoi.com/software/vmail.html&sa=X&ei=iw0JTYnsPMT_lgfgvMC1AQ&ved=0CAUQ6QcwCg&fp=1&cad=b">web reactions</a></li>
+              <li><a href="http://www.google.com/search?ie=UTF-8&q=vmail+vim#sclient=psy&hl=en&tbo=1&tbs=mbl:1%2Cmbl_sv%3A0&q=vmail+vim&aq=f&aqi=&aql=&oq=&gs_rfai=&pbx=1&fp=9ea8abb9b99e5b2d">web reactions</a></li>
             </ul>
             <h4>share this</h4>
 
