--- a/website/vmail-template.html
+++ b/website/vmail-template.html
@@ -38,7 +38,7 @@
               <li><a href="https://github.com/danchoi/vmail/issues">issue tracker</a></li>
               <li><a href="https://github.com/danchoi/vmail/commits/master">commit history</a></li>
               <li><a href="https://github.com/danchoi/vmail/wiki">wiki</a></li>
-              <li><a href="http://twitter.com/#!/search/vmail%20vim">tweets about</a></li>
+              <li><a href="http://twitter.com/#!/search/vmail%20gmail">tweets about</a></li>
             </ul>
             <h4>share this</h4>
 
