--- a/website/vmail-template.html
+++ b/website/vmail-template.html
@@ -38,11 +38,22 @@
               <li><a href="https://github.com/danchoi/vmail/issues">issue tracker</a></li>
               <li><a href="https://github.com/danchoi/vmail/commits/master">commit history</a></li>
               <li><a href="https://github.com/danchoi/vmail/wiki">wiki</a></li>
-              <li><a href="http://twitter.com/#!/search/vmail%20gmail">tweets about</a></li>
             </ul>
+
             <h4>share this</h4>
 
 <span class="st_twitter_large" displayText="Tweet"></span><span class="st_facebook_large" displayText="Facebook"></span><span class="st_ybuzz_large" displayText="Yahoo! Buzz"></span><span class="st_gbuzz_large" displayText="Google Buzz"></span><span class="st_email_large" displayText="Email"></span><span class="st_sharethis_large" displayText="ShareThis"></span>
+
+
+            <div class="also-by">
+              <h4>also by this developer</h4>
+              <ul class="cross-promo">
+                <li><a href="http://instantwatcher.com">instantwatcher.com<a/></li>
+                <li><a href="http://openmbta.org">OpenMBTA<a/></li>
+                <li><a href="http://kindlefeeder.com">kindlefeeder.com<a/></li>
+              </ul>
+            </div>
+
 
           </div>
    
