--- a/website/vmail-template.html
+++ b/website/vmail-template.html
@@ -38,6 +38,7 @@
               <li><a href="https://github.com/danchoi/vmail/issues">issue tracker</a></li>
               <li><a href="https://github.com/danchoi/vmail/commits/master">commit history</a></li>
               <li><a href="https://github.com/danchoi/vmail/wiki">wiki</a></li>
+              <li><a href="https://groups.google.com/group/vmail-users?hl=en">google group</a></li>
             </ul>
 
             <h4>share this</h4>
