--- a/website/vmail-template.html
+++ b/website/vmail-template.html
@@ -49,6 +49,7 @@
             <div class="also-by">
               <h4>also by this developer</h4>
               <ul class="cross-promo">
+                <li><a href="http://danielchoi.com/software/soywiki.html">soywiki<a/></li>
                 <li><a href="http://instantwatcher.com">instantwatcher.com<a/></li>
                 <li><a href="http://openmbta.org">OpenMBTA<a/></li>
                 <li><a href="http://kindlefeeder.com">kindlefeeder.com<a/></li>
