--- a/website/vmail-template.html
+++ b/website/vmail-template.html
@@ -45,6 +45,13 @@
 
 <span class="st_twitter_large" displayText="Tweet"></span><span class="st_facebook_large" displayText="Facebook"></span><span class="st_ybuzz_large" displayText="Yahoo! Buzz"></span><span class="st_gbuzz_large" displayText="Google Buzz"></span><span class="st_email_large" displayText="Email"></span><span class="st_sharethis_large" displayText="ShareThis"></span>
 
+            <iframe src="http://www.facebook.com/plugins/like.php?href=http%3A%2F%2Fdanielchoi.com%2Fsoftware%2Fvmail.html&amp;layout=button_count&amp;show_faces=false&amp;width=50&amp;action=like&amp;colorscheme=light" scrolling="no" frameborder="0" allowTransparency="true" style="border:none; overflow:hidden; width:120px; height:25px; margin-top:6px;"></iframe>
+            <br/>
+            <a href="http://twitter.com/share"
+              class="twitter-share-button"
+              data-url="http://danielchoi.com/software/vmail.html"
+              data-text="SoyWiki" data-count="horizontal">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script>
+
 
             <div class="also-by">
               <h4>also by this developer</h4>
